HADOOP-8141. Add method to SecurityUtil to init krb5 cipher suites. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1298035 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -71,6 +71,9 @@ Release 0.23.3 - UNRELEASED
     HADOOP-8142. Update versions from 0.23.2 to 0.23.3 in the build files.
     (szetszwo)
 
+    HADOOP-8141. Add method to SecurityUtil to init krb5 cipher suites.
+    (todd)
+
   OPTIMIZATIONS
 
   BUG FIXES
