--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -244,6 +244,9 @@ Release 0.23.2 - UNRELEASED
     HDFS-3032. Change DFSClient.renewLease() so that it only retries up to the
     lease soft-limit.  (Kihwal Lee via szetszwo)
 
+    HDFS-2038. Update TestHDFSCLI to handle relative paths with globs.
+    (Kihwal Lee via szetszwo)
+
 Release 0.23.1 - 2012-02-17 
 
   INCOMPATIBLE CHANGES
