HDFS-2764. Merge r1241780 from trunk to 0.23
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1298229 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -173,6 +173,8 @@ Release 0.23.3 - UNRELEASED
     HDFS-2285. BackupNode should reject requests to modify namespace.
     (shv and Uma Maheswara Rao)
 
+    HDFS-2764. TestBackupNode is racy. (atm)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
