HADOOP-8108. Merge r1293128 from trunk to 0.23
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1298239 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -58,7 +58,6 @@ Release 0.23.3 - UNRELEASED
 
     HADOOP-7621. alfredo config should be in a file not readable by users
                  (Alejandro Abdelnur via atm)
-
     HADOOP-8098. KerberosAuthenticatorHandler should use _HOST replacement to 
     resolve principal name (tucu)
 
@@ -76,6 +75,9 @@ Release 0.23.3 - UNRELEASED
 
     HADOOP-8141. Add method to SecurityUtil to init krb5 cipher suites.
     (todd)
+
+    HADOOP-8108. Move method getHostPortString() from NameNode to NetUtils.
+    (Brandon Li via jitendra)
 
   OPTIMIZATIONS
 
