HADOOP-7806. svn merge -c 1298700 from trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1298701 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -81,6 +81,8 @@ Release 0.23.3 - UNRELEASED
 
     HADOOP-7557 Make IPC header be extensible (sanjay radia)
 
+    HADOOP-7806. Support binding to sub-interfaces (eli)
+
   OPTIMIZATIONS
 
   BUG FIXES
