svn merge -c 1299045. Merge MAPREDUCE-3991 into branch-0.23. (harsh)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1299053 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -28,6 +28,8 @@ Release 0.23.3 - UNRELEASED
 	MAPREDUCE-3935. Annotate Counters.Counter and Counters.Group as @Public.
     (tomwhite)
 
+    MAPREDUCE-3991. Streaming FAQ has some wrong instructions about input files splitting. (harsh)
+
   OPTIMIZATIONS
 
   BUG FIXES
