HADOOP-8164. Merging change 1300290 from trunk to 0.23
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1300292 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -265,6 +265,9 @@ Release 0.23.2 - UNRELEASED
     HADOOP-8140. dfs -getmerge should process its argments better (Daryn Sharp
     via bobby)
 
+    HADOOP-8164. Back slash as path separator is handled for Windows only.
+    (Daryn Sharp via suresh)
+
 Release 0.23.1 - 2012-02-17 
 
   INCOMPATIBLE CHANGES
