svn merge -c 1300619 from trunk to branch-0.23 FIXES: HADOOP-8169. javadoc generation fails with java.lang.OutOfMemoryError: Java heap space (tgraves via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1300620 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -130,6 +130,9 @@ Release 0.23.3 - UNRELEASED
     HADOOP-8154. DNS#getIPs shouldn't silently return the local host
     IP for bogus interface names. (eli)
 
+    HADOOP-8169.  javadoc generation fails with java.lang.OutOfMemoryError:
+    Java heap space (tgraves via bobby)
+
   BREAKDOWN OF HADOOP-7454 SUBTASKS
 
     HADOOP-7455. HA: Introduce HA Service Protocol Interface. (suresh)
