--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -67,6 +67,9 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-4007. JobClient getJob(JobID) should return NULL if the job 
     does not exist (for backwards compatibility) (tucu)
 
+    MAPREDUCE-3970 Add ServiceOperations class to aid working with Services
+    (stevel)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
