--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -210,6 +210,9 @@ Release 0.23.3 - UNRELEASED
 
     HDFS-3005. FSVolume.decDfsUsed(..) should be synchronized.  (szetszwo)
 
+    HDFS-3099. SecondaryNameNode does not properly initialize metrics system.
+    (atm)
+
   BREAKDOWN OF HDFS-1623 SUBTASKS
 
     HDFS-2179. Add fencing framework and mechanisms for NameNode HA. (todd)
