svn merge -c 1301250 from trunk for HADOOP-8173.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1301251 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -273,6 +273,9 @@ Release 0.23.2 - UNRELEASED
     HADOOP-8164. Back slash as path separator is handled for Windows only.
     (Daryn Sharp via suresh)
 
+    HADOOP-8173. FsShell needs to handle quoted metachars.  (Daryn Sharp via
+    szetszwo)
+
 Release 0.23.1 - 2012-02-17 
 
   INCOMPATIBLE CHANGES
