--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -615,6 +615,8 @@ Release 0.23.2 - UNRELEASED
     HDFS-2038. Update TestHDFSCLI to handle relative paths with globs.
     (Kihwal Lee via szetszwo)
 
+    HDFS-3101. Cannot read empty file using WebHDFS.  (szetszwo)
+
 Release 0.23.1 - 2012-02-17 
 
   INCOMPATIBLE CHANGES
