svn merge -c 1301303 from trunk for HADOOP-8175.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1301305 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -276,6 +276,8 @@ Release 0.23.2 - UNRELEASED
     HADOOP-8173. FsShell needs to handle quoted metachars.  (Daryn Sharp via
     szetszwo)
 
+    HADOOP-8175. Add -p option to mkdir in FsShell.  (Daryn Sharp via szetszwo)
+
 Release 0.23.1 - 2012-02-17 
 
   INCOMPATIBLE CHANGES
