--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -72,6 +72,8 @@ Release 0.23.3 - UNRELEASED
 
     MAPREDUCE-3431 NPE in Resource Manager shutdown. (stevel)
 
+    MAPREDUCE-4010.  TestWritableJobConf fails on trunk (tucu via bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
