svn merge -c 1301612 from trunk to branch-0.23 FIXES HADOOP-8176.  Disambiguate the destination of FsShell copies (Daryn Sharp via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1301618 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -281,6 +281,9 @@ Release 0.23.2 - UNRELEASED
 
     HADOOP-8175. Add -p option to mkdir in FsShell.  (Daryn Sharp via szetszwo)
 
+    HADOOP-8176.  Disambiguate the destination of FsShell copies (Daryn Sharp
+    via bobby)
+
 Release 0.23.1 - 2012-02-17 
 
   INCOMPATIBLE CHANGES
