svn merge -c 1301665 from trunk for HDFS-3104.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1301666 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -566,6 +566,8 @@ Release 0.23.2 - UNRELEASED
 
     HDFS-3098. Update and add tests for HADOOP-8173. (Daryn Sharp via szetszwo)
 
+    HDFS-3104. Add tests for HADOOP-8175. (Daryn Sharp via szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-3024. Improve performance of stringification in addStoredBlock (todd)
