svn Merge HDFS-3111 added the apache licence headers (umamahesh)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1301878 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -143,6 +143,8 @@ Release 0.23.3 - UNRELEASED
 
     HDFS-3088. Move FSDatasetInterface inner classes to a package.  (szetszwo)
 
+    HDFS-3111. Missing license headers in trunk. (umamahesh)
+
   OPTIMIZATIONS
     HDFS-2477. Optimize computing the diff between a block report and the
                namenode state. (Tomasz Nykiel via hairong)
