svn merge -c 1302598. Merge HADOOP-8183 into branch-0.23 from trunk.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1302626 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -91,6 +91,8 @@ Release 0.23.3 - UNRELEASED
     HADOOP-6941. Adds support for building Hadoop with IBM's JDK 
     (Stephen Watt, Eli and ddas)
 
+    HADOOP-8183. Stop using "mapred.used.genericoptions.parser" (harsh)
+
   OPTIMIZATIONS
 
   BUG FIXES
