HADOOP-8189. LdapGroupsMapping shouldn't throw away IOException. Contributed by Jonathan Natkins.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1302784 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -143,6 +143,8 @@ Release 0.23.3 - UNRELEASED
 
     HADOOP-8167. Configuration deprecation logic breaks backwards compatibility (tucu)
 
+    HADOOP-8189. LdapGroupsMapping shouldn't throw away IOException. (Jonathan Natkins via atm)
+
   BREAKDOWN OF HADOOP-7454 SUBTASKS
 
     HADOOP-7455. HA: Introduce HA Service Protocol Interface. (suresh)
