HADOOP-7788. Add simple HealthMonitor class to watch an HAService. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1303207 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -96,6 +96,8 @@ Release 0.23.3 - UNRELEASED
 
     HADOOP-8183. Stop using "mapred.used.genericoptions.parser" (harsh)
 
+    HADOOP-7788. Add simple HealthMonitor class to watch an HAService (todd)
+
   OPTIMIZATIONS
 
   BUG FIXES
