svn merge -c 1304542 from trunk for HADOOP-8184.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1304546 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -100,6 +100,9 @@ Release 0.23.3 - UNRELEASED
 
     HADOOP-8200. Remove HADOOP_[JOBTRACKER|TASKTRACKER]_OPTS. (eli)
 
+    HADOOP-8184.  ProtoBuf RPC engine uses the IPC layer reply packet.
+    (Sanjay Radia via szetszwo)
+
   OPTIMIZATIONS
 
   BUG FIXES
