HDFS-3132. Fix findbugs warning on HDFS trunk. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1304682 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -243,6 +243,8 @@ Release 0.23.3 - UNRELEASED
     HDFS-3100. In BlockSender, throw an exception when it needs to verify
     checksum but the meta data does not exist.  (Brandon Li via szetszwo)
 
+    HDFS-3132. Fix findbugs warning on HDFS trunk. (todd)
+
   BREAKDOWN OF HDFS-1623 SUBTASKS
 
     HDFS-2179. Add fencing framework and mechanisms for NameNode HA. (todd)
