svn merge -c 1305343. Merge MAPREDUCE-4066 into branch-0.23 from trunk.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1305348 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -80,6 +80,9 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-3992. Reduce fetcher doesn't verify HTTP status code of response
     (todd)
 
+    MAPREDUCE-4066. Use default value when fetching MR_AM_STAGING_DIR
+    (xieguiming via harsh)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
