svn merge -c 1305590 from trunk for HDFS-3089. Move FSDatasetInterface and the related classes to a package.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1305594 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -165,6 +165,9 @@ Release 0.23.3 - UNRELEASED
     HDFS-3071. haadmin failover command does not provide enough detail when
     target NN is not ready to be active. (todd)
 
+    HDFS-3089. Move FSDatasetInterface and the related classes to a package.
+    (szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-2477. Optimize computing the diff between a block report and the
