svn merge -c 1305607 trunk to branch-0.23 FIXES: MAPREDUCE-4061. RM only has 1 AM launcher thread (tgraves via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1305608 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -261,6 +261,8 @@ Release 0.23.2 - UNRELEASED
     MAPREDUCE-4006. History server container log web UI sometimes combines
     stderr/stdout/syslog contents together (Siddharth Seth via tgraves)
 
+    MAPREDUCE-4061. RM only has 1 AM launcher thread (tgraves via bobby)
+
 Release 0.23.1 - 2012-02-17
 
   NEW FEATURES
